@@ -1,3 +1,7 @@
+2004-01-13  John Luke  <jluke@cfl.rr.com>
+
+	* en/Gtk/TreeSelection.xml: add example
+
 2004-01-12  Hector E. Gomez Morales  <hgomez_36@flashmail.com>
 
 	* en/Gtk/Ctree.xml
@@ -7,7 +11,7 @@
 	* en/Gtk/Widget.xml: Documented the remaining methods and properties.
 	* en/Gtk/Window.xml: Documented all methods excepts the overloads and all the properties.
 
-2004-01-08  John Luke  <jluke@cfl.rr.com>
+2004-01-11  John Luke  <jluke@cfl.rr.com>
 	
 	* en/Gtk/RadioButton.xml:
 	* en/Gtk/Notebook.xml:
